# edit

./: .gitignore  Cargo.toml  README.md  edit.desktop  index.html  install.ps1  install.sh  theme-vars.css
.github/workflows/: deploy-pages.yml  release.yml
crates/app/: Cargo.toml
crates/app/src/: events.rs  keybindings.rs  main.rs  state.rs
crates/core-buffer/: Cargo.toml
crates/core-buffer/src/: lib.rs
crates/core-diff/: Cargo.toml
crates/core-diff/src/: lib.rs
crates/core-fs/: Cargo.toml
crates/core-fs/src/: lib.rs
crates/core-picker/: Cargo.toml
crates/core-picker/src/: lib.rs
crates/core-syntax/: Cargo.toml
crates/core-syntax/src/: lib.rs
crates/core-theme/: Cargo.toml
crates/core-theme/src/: lib.rs
crates/ui-gui/: Cargo.toml
crates/ui-gui/src/: main.rs
crates/ui-tui/: Cargo.toml
crates/ui-tui/src/: command_bar.rs  diff_view.rs  editor.rs  help.rs  layout.rs  lib.rs  picker_ui.rs  sidebar.rs  statusbar.rs  tabs.rs
scripts/: setup-signing.mjs  setup-signing.sh
website/: index.html  theme.js
