[package]
name = "core-syntax"
version = "0.1.0"
edition = "2021"

[dependencies]
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-json = { workspace = true }
tree-sitter-toml-ng = { workspace = true }
tree-sitter-yaml = { workspace = true }
tree-sitter-md = { workspace = true }
tree-sitter-bash = { workspace = true }
tree-sitter-css = { workspace = true }
tree-sitter-html = { workspace = true }
anyhow = { workspace = true }
